--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Recume &mdash; </title>
+	<title>Resume &mdash; </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -179,7 +179,7 @@ interested in psychology, neuromarketing, digital marketing and IT sphere..</p>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">BUSINESS DEVELOPMENT MANAGER/PRODUCT MANAGER</h3>
-									<span class="company">PILOT PLANT OF WELDING EQUIPMENT "PATON" - 2010 - 2016</span>
+									<span class="company">PILOT PLANT  "PATON"-2010 -2016</span>
 								</div>
 								<div class="timeline-body">
 									<p>✔Conducting regular research on the company's image;<br>
@@ -207,7 +207,7 @@ interested in psychology, neuromarketing, digital marketing and IT sphere..</p>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">PHILOLOGY MASTER'S DEGREE.</h3>
-									<span class="company">NIKOLAEV NATIONAL UNIVERSITY. V. A. SUKHOMLINSKY- 2007 - 2009</span>
+									<span class="company">NIKOLAEV NATIONAL UNIVERSITY. V. A. SUKHOMLINSKY- 2002 - 2007</span>
 								</div>
 								<div class="timeline-body">
 									<p>Qualification: teacher of English language and foreign literature.
@@ -220,7 +220,7 @@ interested in psychology, neuromarketing, digital marketing and IT sphere..</p>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Bachelors Degree</h3>
-									<span class="company">NIKOLAYEV MILITARY AUTOMOBILE COLLEGE - 2002 - 2006</span>
+									<span class="company">NIKOLAYEV MILITARY AUTOMOBILE COLLEGE -1997 - 2000</span>
 								</div>
 								<div class="timeline-body">
 									<p>QUALIFICATION: MECHANIC TECHNICIAN.
@@ -235,10 +235,10 @@ Specialty: maintenance and repair of automobiles and engines.
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">FullStack developer</h3>
-									<span class="company">GOIT IT school - 1999 - 2001</span>
+									<span class="company">GOIT IT school 2020 -2021</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>REACT.JS,HTML/CSS,NODE.JS,JS,SASS,Figma,Github</p>
 								</div>
 							</div>
 						</li>
