--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<!-- фавикон -->
+	
+
+ <link rel="shortcut icon" href="/profile/images/apple-touch-icon.png" type="image/x-icon">
+
+
+
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Resume &mdash; </title>
+	<title>Max CV</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -53,6 +60,12 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
+
+	 <!-- AniCollection.css library -->
+    <link rel="stylesheet" href="http://anijs.github.io/lib/anicollection/anicollection.css">
+
+
+
 
 	</head>
 	<body>
@@ -873,6 +886,10 @@ National Training Agency/ Speaker Maxim Golubev.<br>
 						  <div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:75%">
 						  </div> -->
+
+
+						  
+
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -892,6 +909,12 @@ National Training Agency/ Speaker Maxim Golubev.<br>
 	<!-- Main -->
 	<script src="js/main.js"></script>
 
+	<!-- анимация -->
+	<script src="anijs-min.js"></script>
+
 	</body>
+	<footer class="footer">
+
+	</footer>
 </html>
 
