--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE HTML>
 <html>
-	<head>		<!-- фавикон -->
+	<head>
+		<!-- фавикон -->
 	
 
  <link rel="shortcut icon" href="/profile/images/apple-touch-icon.png" type="image/x-icon">
+
+
 
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Max CV</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
+	<meta name="description" content="" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="freehtml5.co" />	
+	
+
+
 	
 
   	<!-- Facebook and Twitter integration -->
