adding my files to my repository

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<!-- фавикон -->
 	
 
- <link rel="shortcut icon" href="/profile/images/apple-touch-icon.png" type="image/x-icon">
+ <link rel="shortcut icon" href="/profile/images/favicon.ico" type="image/x-icon">
 
 
 
@@ -12,24 +12,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Max CV</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
+	<meta name="description" content="" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="freehtml5.co" />
+	
 
 
-	<!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FreeHTML5.co
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
+	
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -918,4 +906,5 @@ National Training Agency/ Speaker Maxim Golubev.<br>
 
 	</footer>
 </html>
+
 
