--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<!-- фавикон -->
 	
 
- <link rel="shortcut icon" href="/profile/images/favicon.ico" type="image/x-icon">
+<!--  <link rel="shortcut icon" href="/profile/images/favicon.ico" type="image/x-icon"> -->
 
 
 
@@ -52,7 +52,7 @@
 
 	 <!-- AniCollection.css library -->
     <link rel="stylesheet" href="http://anijs.github.io/lib/anicollection/anicollection.css">
-
+     <link rel="shortcut icon" href="/profile/images/favicon-16x16.png" type="image/x-icon"/>
 
 
 
