--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<!-- фавикон -->
-	
-
-<!--  <link rel="shortcut icon" href="/profile/images/favicon.ico" type="image/x-icon"> -->
-
-
-
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Max CV</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
+	<meta name="keywords" content="responsive" />
 	
 
+
+
+
+
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="icon" type="image/vnd.microsoft.icon" href="/favicon.ico">
+<link rel="icon" type="image/x-icon" href="/favicon.ico">
+<link rel="icon" href="/favicon.ico" /> 
 
 	
 
@@ -29,9 +30,14 @@
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
-
+	
+<!-- <link rel="shortcut icon" href="/profile/images/favicon-16x16.png" type="image/x-icon"/> -->
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+<!--		еще вариант подключения фавикона-->
+		<!-- <link rel="icon" type="image/x-icon"
+			  href="./favicon-16x16.png" /> -->
+
 	
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -52,7 +58,7 @@
 
 	 <!-- AniCollection.css library -->
     <link rel="stylesheet" href="http://anijs.github.io/lib/anicollection/anicollection.css">
-     <link rel="shortcut icon" href="/profile/images/favicon-16x16.png" type="image/x-icon"/>
+
 
 
 
@@ -70,7 +76,8 @@
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/SSKSE7354.JPG);"></div>
-							<h1><span>Max Shulgin</span></h1>
+							<h1 class="#me"><span>Max Shulgin</span></h1>
+							
 							<h3><span>BUSINESS DEVELOPMENT MANAGER/ENTERPRISE SALES</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
