--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
 <!--		еще вариант подключения фавикона-->
-		<!-- <link rel="icon" type="image/x-icon"
-			  href="./favicon-16x16.png" /> -->
+		<link rel="icon" type="image/x-icon"
+			  href="./favicon-16x16.png" />
 
 	
 	<!-- Animate.css -->
@@ -505,7 +505,8 @@ National Training Agency/ Speaker Maxim Golubev.<br>
 				</div>
 				<!-- <div class="col-md-85"> -->
 					<!-- <h2>MY MOTTO - I LOVE WHAT I DO, AND I DO WHAT I LOVE!</h2> -->
-					<article><p class="cases">Productive work in largest national vendor with full production cycle, technological leader of its segment,
+					<article><p class="cases">✔Productive work in largest national vendor with full production cycle,
+						 technological leader of its segment,
                     positioning of globally known brand.<br>
                    ✔Successful promotion of high-tech product in Ukraine, Europe, African countries.<br>
                    ✔Management of direct & indirect sales in 5 regions, network of dealers and distributors in them;<br>
@@ -529,7 +530,10 @@ National Training Agency/ Speaker Maxim Golubev.<br>
 ✎Bitrix24, Pipedrive,Trello,Asana,Toggl Time Tracker;<br>
 ✎Accounting 1C 8.2/8.3;<br>
 ✎Adobe Illustrator, Picasa, Figma, Canva, Movavi Video Editor Pro;<br>
-✎VS Code, WebStorm, GIT, IDLE Python 3.7;</p></div>
+✎VS Code, WebStorm, GIT, IDLE Python 3.7;<br>
+✎HTML5,CSS3,Sass,JavaScript,React.js, npm, Webpack,Node.js<br>
+</p>
+</div>
 					
 				</div>
 			</div>
