--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Max CV</title>
+	<title>Max Shulgin</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="responsive" />
@@ -123,7 +123,7 @@
 						<li><span class="first-block">Full Name:</span><span class="second-block">Maxim Shulgin</span></li>
 						<li><span class="first-block">Phone:</span><span class="second-block">+380638939723</span></li>
 						<li><span class="first-block">Email:</span><span class="second-block">maxim.shulgin@gmail.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">www.yoursite.com</span></li>
+						<li><span class="first-block">Website:</span><span class="second-block"></span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">Ukraine,Kiev</span></li>
 					</ul>
 				</div>
@@ -173,13 +173,12 @@ interested in psychology, neuromarketing, digital marketing and IT sphere..</p>
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">HEAD OF SALES</h3>
-									<span class="company">SMART OFFICE - 2019-2020</span>
+									<h3 class="timeline-title">Business development manager</h3>
+									<span class="company">NDA - 2019-2020</span>
 								</div>
 								<div class="timeline-body">
-									<p>✔Sales department planning;<br>
-✔Active search for new customers, contract conclusions;<br>
-✔Control of warehouse and logistics service;<br>
+									
+✔Leads generation, qualification, closing deals<br>
 ✔Participation in pricing;<br>
 ✔Formation of an assortment goods;<br>
 ✔Analytics and reporting;</p>
@@ -191,12 +190,10 @@ interested in psychology, neuromarketing, digital marketing and IT sphere..</p>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">CHIEF SALES & MARKETING OFFICER</h3>
-									<span class="company">WHITE BOOMERANG - 2016 - 2018</span>
+									<span class="company">NDA - 2016 - 2018</span>
 								</div>
 								<div class="timeline-body">
-									<p>✔Development marketing strategy,loyalty program;<br>
-✔Initializing rebranding of the company,technical tasks for designers;<br>
-✔Development & management of digital channels of communication with customers (search marketing, smm, email marketing,call center)<br>
+									<p>✔Development marketing strategy,loyalty program;<br> 
 ✔Building and maintaining effective communications with partners;<br>
 ✔Conducting sales trainings for team;<br>
 ✔Conducting regular research of the company's image;<br>
@@ -210,8 +207,8 @@ interested in psychology, neuromarketing, digital marketing and IT sphere..</p>
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">BUSINESS DEVELOPMENT MANAGER/PRODUCT MANAGER</h3>
-									<span class="company">PILOT PLANT  "PATON"-2010 -2016</span>
+									<h3 class="timeline-title">BUSINESS DEVELOPMENT MANAGER/PROJECT MANAGER</h3>
+									<span class="company">PILOT PLANT  "PATON"-2011 -2016</span>
 								</div>
 								<div class="timeline-body">
 									<p>✔Conducting regular research on the company's image;<br>
@@ -264,7 +261,7 @@ Specialty: maintenance and repair of automobiles and engines.</p>
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">FullStack developer</h3>
+									<h3 class="timeline-title">Frontend developer</h3>
 									<span class="company">GOIT IT school 2020 -2021</span>
 								</div>
 								<div class="timeline-body">
@@ -399,7 +396,7 @@ National Training Agency/ Speaker Maxim Golubev.<br>
 ✦Aggressive sales on B2B market.
 <h3>MARKETING</h3>
 ✦Neuromarketing: What goes on inconsumer's head?<br>
-✦Digital marketing/ Genesis.
+✦Digital marketing/ Genesis.<br>
 ✦Copywriting.Power of word/Lyudmila Laguta.<br>
 ✦BRAND FATHER/Speaker Andrei Fedoriv.<br>
 ✦How to sell creatives/Pavel Vrzheshch (BANDA AGENCY)<br>
@@ -407,7 +404,7 @@ National Training Agency/ Speaker Maxim Golubev.<br>
 ✦Affiliate marketing/Admitad Academy<br>
 <h3>IT</h3>
 ✦Agile, scrum project management/SkillBox Marketing<br>
-✦FullStack developer/ GO IT(07.2020 -05.2021)
+✦Frontend developer/ GO IT
 
 				</div>
 			<div>
@@ -550,7 +547,7 @@ National Training Agency/ Speaker Maxim Golubev.<br>
 					<p class="tool-p">✎MS Word, Excel, PowerPoint;<br>
 ✎Google Analytics,Google Ads, Facebook Ads manager, Smmplanner;<br>
 ✎SendPulse, Unisender;<br>
-✎Bitrix24, Pipedrive,Trello,Asana,Toggl Time Tracker;<br>
+✎Bitrix24, Pipedrive,Trello,Asana,Miro,Toggl Time Tracker;<br>
 ✎Accounting 1C 8.2/8.3;<br>
 ✎Adobe Illustrator, Picasa, Figma, Canva, Movavi Video Editor Pro;<br>
 ✎VS Code, WebStorm, GIT, IDLE Python 3.7;<br>
@@ -653,7 +650,7 @@ National Training Agency/ Speaker Maxim Golubev.<br>
 							<h3>Project Name</h3>
 							<span>Illustration</span>
 						</div>
-					<!-- </a>
+					 </a>
 				</div>
 			</div>
 		</div>
@@ -935,6 +932,8 @@ National Training Agency/ Speaker Maxim Golubev.<br>
 	<!-- анимация -->
 	<script src="anijs-min.js"></script>
 
+	<!-- кнопка вверх -->
+<a href="#" id="scroll_top">↑ Наверх</a>
 	</body>
 	<footer class="footer">
 	
