--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<div class="col-md-4">
 					<ul class="info">
 						<li><span class="first-block">Full Name:</span><span class="second-block">Maxim Shulgin</span></li>
-						<li><span class="first-block">Phone:</span><span class="second-block">+380638939723</span></li>
+						<li><span class="first-block">Phone:</span><span class="second-block">+380502571230</span></li>
 						<li><span class="first-block">Email:</span><span class="second-block">maxim.shulgin@gmail.com</span></li>
 						<li><span class="first-block">Website:</span><span class="second-block"></span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">Ukraine,Kiev</span></li>
@@ -208,7 +208,7 @@ interested in psychology, neuromarketing, digital marketing and IT sphere..</p>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">BUSINESS DEVELOPMENT MANAGER/PROJECT MANAGER</h3>
-									<span class="company">PILOT PLANT  "PATON"-2011 -2016</span>
+									<span class="company">PILOT PLANT "PATON" 2011 -2016</span>
 								</div>
 								<div class="timeline-body">
 									<p>✔Conducting regular research on the company's image;<br>
@@ -218,10 +218,10 @@ interested in psychology, neuromarketing, digital marketing and IT sphere..</p>
 ✔Maintenance of existing and expansion of client base of company, search for new dealers and distributors;<br>
 ✔Control of fulfillment of sales plan for regions;<br>
 ✔Formation of sales plans for dealers/distributors;<br>
-✔Implementation of company's marketing strategy in regions;<br>
+✔Implementation of company's trade marketing strategy in regions;<br>
 ✔Training of personnel of dealer companies, DIY networks, presentations, seminars;<br>
 ✔Contracting, project management;<br>
-✔Work with corporate and government sector, participation in tenders; ✔Participation in development of marketing kit;<br>
+✔Work with corporate and government sector, participation in tenders;<br>
 ✔Exhibition organization/participation;</p>
 								</div>
 							</div>
@@ -297,7 +297,6 @@ Specialty: maintenance and repair of automobiles and engines.</p>
 						<div class="certificates">
 							Google Digital Workshop. Fundamentals of Digital Marketing (2020)
 Fundamentals of contextual advertising/Netology<br>
-Lisa Earle McLeod. Sales negotiation
 						</div>
 					</div>
 				</div>
@@ -388,17 +387,17 @@ Lisa Earle McLeod. Sales negotiation
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Courses</h2>
+					<h2>Courses/Trainings</h2>
 					<h3>SALES</h3>
 					National Training Agency / Speaker Maxim Golubev.<br>
 ✦Course on extreme negotiations: rules of fighting without rules.<br>
 National Training Agency/ Speaker Maxim Golubev.<br>
-✦Aggressive sales on B2B market.
+✦Aggressive sales on B2B market.<br>
+✦Lisa Earle McLeod. Sales negotiation.<br>
 <h3>MARKETING</h3>
 ✦Neuromarketing: What goes on inconsumer's head?<br>
 ✦Digital marketing/ Genesis.<br>
-✦Copywriting.Power of word/Lyudmila Laguta.<br>
-✦BRAND FATHER/Speaker Andrei Fedoriv.<br>
+✦BRAND FATHER/Speaker Andrey Fedoriv.<br>
 ✦How to sell creatives/Pavel Vrzheshch (BANDA AGENCY)<br>
 ✦Account based marketing/Abm expert<br>
 ✦Affiliate marketing/Admitad Academy<br>
