--- a/index.html
+++ b/index.html
@@ -544,9 +544,9 @@ National Training Agency/ Speaker Maxim Golubev.<br>
 ✎Bitrix24, Pipedrive,Trello,Asana,Miro;<br>
 ✎Snovio, Influ2;<br>
 ✎Accounting 1C 8.2/8.3;<br>
-✎Adobe Illustrator, Picasa, Figma, Canva, Movavi Video Editor Pro;<br>
+✎Adobe Illustrator, Figma, Canva, Movavi Video Editor Pro;<br>
 ✎VS Code, WebStorm, Github, IDLE Python 3.7;<br>
-✎HTML5,CSS3,Sass,JavaScript,React.js, NPM, Webpack,Node.js<br>
+✎HTML5,CSS3,Sass,JavaScript,React.js, NPM, Webpack,Node.js,Github, Git Bash<br>
 </p>
 </div>
 					
