--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ National Training Agency/ Speaker Maxim Golubev.<br>
 ✦Sales negotiation/Lisa Earle McLeod.<br>
 <br>
 <h3>MARKETING</h3>
-✦Neuromarketing: What goes on inconsumer's head?<br>
+✦Neuromarketing: What goes on consumer's head?<br>
 ✦Digital marketing/ Genesis.<br>
 ✦BRAND FATHER/Speaker Andrey Fedoriv.<br>
 ✦How to sell creatives/Pavel Vrzheshch (BANDA AGENCY)<br>
